[gd_scene load_steps=4 format=3 uid="uid://cq8v3k5n2p4ym"]

[ext_resource type="Script" uid="uid://cyeujjl31xggj" path="res://scenes/resources_menu_view.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://ckorw5avm0nr4" path="res://themes/DarkMode.res" id="2_theme"]
[ext_resource type="StyleBox" uid="uid://rroywssaded8" path="res://materials/panel_style_box_flat.tres" id="3_panel"]

[node name="ResourcesMenuView" type="CanvasLayer"]
layer = 10
visible = false
script = ExtResource("1_script")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_styles/panel = ExtResource("3_panel")

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 16
text = "Resources"
horizontal_alignment = 1

[node name="ResourceGrid" type="GridContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 12

[node name="Margin" type="MarginContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBox"]
layout_mode = 2

[node name="PaginationLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_theme")
theme_override_font_sizes/font_size = 14
text = "Page 1/1"
horizontal_alignment = 1
